fixed search overlap bug and added loading animation

--- a/src/components/Body/Widgets/Catagory/Catagorynewslist.css
+++ b/src/components/Body/Widgets/Catagory/Catagorynewslist.css
@@ -96,20 +96,55 @@
 {
     margin: 10px 0;
 }
-.loading-thumbnail,.loading-category,.loading-line,.loading-date
+.loading-news-thumbnail
 {
     opacity: .7;
     background-color: #9c9c9c;
     animation: skeleton .5s linear infinite alternate;
 }
+.loading-news-thumbnail
+{
+    width: 100%;
+    height: 70%;
+}
+.loading-news-title .loading-line
+{
+    margin: 5px 0;
+    width: 100%;
+    height: 20px;
+}
+.loading-news-title .loading-line:last-child
+{
+    width: 80%;
+}
+.loading-news-description,.loading-news-title
+{
+    margin: 20px 0;
+}
+.loading-news-description .loading-line
+{
+    margin: 5px 0;
+    width: 100%;
+    height: 10px;
+}
+.loading-news-description .loading-line:last-child
+{
+    width: 80%;
+}
+.loading-thumbnail,.loading-category,.loading-line,.loading-date
+{
+    opacity: .7;
+    background-color: #afafaf;
+    animation: skeleton .5s linear infinite alternate;
+}
 @keyframes skeleton {
     0%
     {
-        background-color: #9c9c9c;
+        background-color: #afafaf;
     }
     100%
     {
-        background-color:#c0c0c0 ;
+        background-color:#e2e2e2 ;
     }
 }
 .loading-thumbnail
@@ -150,6 +185,11 @@
 }
 .articlist
 {
+    width: 100%;
+}
+.loading-news-thumbnail
+{
+    height: 30vh;
     width: 100%;
 }
     
